<resources>
    <string name="mision_placeholder">Nuestra misión es construir un puente de amor y compasión entre las mascotas necesitadas y hogares amorosos. Nos esforzamos por brindar una plataforma dedicada a facilitar el proceso de adopción y búsqueda de un nuevo hogar para perros y gatos. Nos comprometemos a garantizar la seguridad y el bienestar de cada animal, fomentando una comunidad de adopción responsable y apoyando a aquellas personas que desean agregar una nueva mascota a sus vidas. Nuestra misión es impulsada por el deseo de crear un mundo donde cada mascota tenga la oportunidad de experimentar el amor incondicional y la felicidad en un hogar afectuoso.</string>
    <string name="vision_placeholder">Imaginamos un futuro en el que cada perro y gato, sin importar su origen, tenga la oportunidad de vivir una vida plena y feliz en un hogar lleno de amor. Visualizamos una comunidad conectada, donde los amantes de los animales pueden encontrar fácilmente a sus compañeros peludos y compartir experiencias enriquecedoras. Aspiramos a ser la principal plataforma de adopción, reconocida por su compromiso con el bienestar animal, la transparencia y la promoción de prácticas de adopción éticas. Nuestra visión es forjar relaciones duraderas entre mascotas y familias, contribuyendo así a un mundo donde cada animal reciba el amor y el cuidado que merece.</string>
    <string name="app_name" translatable="false">APP FIREBASE LOGIN</string>
    <string name="e_mail">E-Mail</string>
    <string name="password">Password</string>
    <string name="ingresar">ingresar</string>
    <string name="correo">Correo</string>
    <string name="repetir_password">Repeir Password</string>
    <string name="registrarse">Registrarse</string>
    <string name="confirmar_password">Confirmar_password</string>
    <string name="registrate">Registrate</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="formulario_de_registro_de_mascotas">Formulario De Registro De Mascotas</string>
    <string name="a_adir_imagen">Añadir Imagen</string>
    <string name="nombre_mascota">Nombre Mascota</string>
    <string name="raza">Raza</string>
    <string name="sexo">Sexo</string>
    <string name="edad">Edad</string>
    <string name="tama_o">Tamaño</string>
    <string name="esterilizado">Esterilizado</string>
    <string name="fecha_ingreso">Fecha Ingreso</string>
    <string name="formulario_registro_de_mascota">Formulario Registro De Mascota</string>
    <string name="guardar">Guardar</string>
    <string name="descripci_n">Descripciòn</string>
    <string name="ingrese_una_descripci_n">Ingrese una Descripciòn</string>
    <string name="tap_fecha">Tap Fecha</string>
    <string name="no">No</string>
    <string name="s">Sí</string>
    <string name="ingrese_tama_o">Ingrese Tamaño</string>
    <string name="_2_a_os">2 Años</string>
    <string name="ingrese_sexo">Ingrese Sexo</string>
    <string name="ingrese_raza">Ingrese Raza</string>
    <string name="name">Name</string>
    <string name="dar_en_adopci_n">DAR EN ADOPCIÓN</string>
    <string name="adoptar">ADOPTAR</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="esta_esterilizado">Esta esterilizado?</string>
</resources>